--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     server {
         listen 443;
-        server_name strengthgadget.com;
+        server_name staging.strengthgadget.com;
 
         location / {
             proxy_pass https://127.0.0.1:8081;
