--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name strengthgadget.com;
 
         location / {
-            proxy_pass https://127.0.0.1:8080;
+            proxy_pass http://127.0.0.1:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,7 +19,7 @@ http {
         server_name staging.strengthgadget.com;
 
         location / {
-            proxy_pass https://127.0.0.1:8081;
+            proxy_pass http://127.0.0.1:8081;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
