--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     server {
-        listen 443;
+        listen 443 ssl;
         server_name strengthgadget.com;
 
         location / {
@@ -15,7 +15,7 @@ http {
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name staging.strengthgadget.com;
 
         location / {
