--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key && chmod 600 .key
             echo "$TF_VAR_backend_deployment_ssh_public_known_host" | base64 -d > ~/.ssh/known_hosts
             ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p reverse-proxy'
-            scp -i ./.key reverse-proxy/docker-compose.yaml reverse-proxy/nginx.conf "piegarden@$TF_VAR_backend_public_ip:reverse-proxy"
+            scp -i ./.key reverse-proxy/docker-compose.yaml reverse-proxy/haproxy.cfg "piegarden@$TF_VAR_backend_public_ip:reverse-proxy"
             ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" "cd reverse-proxy && sudo docker compose down || true && sudo docker compose up -d"
   build:
     docker:
