--- a/reverse-proxy/docker-compose.yaml
+++ b/reverse-proxy/docker-compose.yaml
@@ -1,8 +1,7 @@
 services:
-  reverse-proxy:
-    image: "nginx"
-    ports:
-      - "443:443"
+  haproxy:
+    image: "haproxy:latest"
+    network_mode: "host"
     volumes:
-      - "./nginx.conf:/etc/nginx/nginx.conf"
-
+      - "./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg"
+    restart: always
