--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -28,9 +28,10 @@ frontend tcp-in
     use-server staging if staging_acl
     use-server production if production_acl
 
-    default_backend default_backend
-
-backend default_backend
+backend staging
     mode tcp
-    server staging 127.0.0.1:8081 check
-    server production 127.0.0.1:8080 check
+    server staging 127.0.0.1:8081
+
+backend production
+    mode tcp
+    server production 127.0.0.1:8080
