--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -25,8 +25,8 @@ frontend tcp-in
     acl staging_acl req.ssl_sni -i staging.strengthgadget.com
     acl production_acl req.ssl_sni -i strengthgadget.com
 
-    use-server staging if staging_acl
-    use-server production if production_acl
+    use-backend staging if staging_acl
+    use-backend production if production_acl
 
 backend staging
     mode tcp
