--- a/reverse-proxy/docker-compose.yaml
+++ b/reverse-proxy/docker-compose.yaml
@@ -5,5 +5,7 @@ services:
     volumes:
       - "./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg"
     restart: always
+    sysctls:
+      - net.ipv4.ip_unprivileged_port_start=0
     cap_add:
       - NET_BIND_SERVICE
