--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -28,8 +28,8 @@ frontend tcp-in
 
 backend staging
     mode tcp
-    server staging 127.0.0.1:8081
+    server staging staging.strengthgadget.com_webserver:443
 
 backend production
     mode tcp
-    server production 127.0.0.1:8080
+    server production strengthgadget.com_webserver:443
