--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -28,8 +28,8 @@ frontend tcp-in
 
 backend staging
     mode tcp
-    server staging webserver_staging.strengthgadget.com:443
+    server staging staging.strengthgadget.com:443
 
 backend production
     mode tcp
-    server production webserver_strengthgadget.com_webserver:443
+    server production strengthgadget.com:443
