--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -28,8 +28,8 @@ frontend tcp-in
 
 backend staging
     mode tcp
-    server staging webserver:443
+    server staging staging_webserver:443
 
 backend production
     mode tcp
-    server production webserver:443
+    server production production_webserver:443
