--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -28,8 +28,8 @@ frontend tcp-in
 
 backend staging
     mode tcp
-    server staging staging-webserver-1:443
+    server staging staging:443
 
 backend production
     mode tcp
-    server production production-webserver-1:443
+    server production production:443
