--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       TF_VAR_redis_ca: "${TF_VAR_redis_ca}"
       TF_VAR_sentry_end_point: "${TF_VAR_sentry_end_point}"
       TF_VAR_allowed_verification_resend_code_attempts_within_one_hour: "${TF_VAR_allowed_verification_resend_code_attempts_within_one_hour}"
+      TF_VAR_domain_name: "${TF_VAR_domain_name}"
     restart: always
     networks:
       - default
