--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -12,11 +12,17 @@ frontend tcp-in
     tcp-request inspect-delay 5s
     tcp-request content accept if { req.ssl_hello_type 1 }
 
+    acl local_acl req.ssl_sni -i local.strengthgadget.com
     acl staging_acl req.ssl_sni -i staging.strengthgadget.com
     acl production_acl req.ssl_sni -i strengthgadget.com
 
+    use_backend local if staging_acl
     use_backend staging if staging_acl
     use_backend production if production_acl
+
+backend local
+    mode tcp
+    server local local:443
 
 backend staging
     mode tcp
