--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -1,7 +1,7 @@
 services:
   webserver:
-    image: scratch
-    container_name: "${TF_VAR_environment}"
+    image: "public.ecr.aws/docker/library/alpine:3.20.1"
+    container_name: "local"
     depends_on:
       - keydb
     volumes:
