--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -16,7 +16,7 @@ frontend tcp-in
     acl staging_acl req.ssl_sni -i staging.strengthgadget.com
     acl production_acl req.ssl_sni -i strengthgadget.com
 
-    use_backend local if staging_acl
+    use_backend local if local_acl
     use_backend staging if staging_acl
     use_backend production if production_acl
 
