--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -1,5 +1,5 @@
 services:
-  webserver:
+  app:
     image: "public.ecr.aws/docker/library/alpine:3.20.1"
     container_name: "local"
     depends_on:
