--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,11 @@ jobs:
       - run:
           name: Deploy reverse proxy
           command: |
-            echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key && chmod 600 .key
-            echo "$TF_VAR_backend_deployment_ssh_public_known_host" | base64 -d > ~/.ssh/known_hosts
-            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p reverse-proxy'
-            scp -i ./.key reverse-proxy/docker-compose.yaml reverse-proxy/haproxy.cfg "piegarden@$TF_VAR_backend_public_ip:reverse-proxy"
-            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" "cd reverse-proxy && sudo docker compose down || true && sudo docker compose up -d"
+            echo "$TF_VAR_deployment_key_private_key" | base64 -d > .key && chmod 600 .key
+            echo "$TF_VAR_deployment_key_known_hosts" | base64 -d > ~/.ssh/known_hosts
+            ssh -p 2222 -i ./.key "piegarden@$TF_VAR_static_ip" 'mkdir -p reverse-proxy'
+            scp -P 2222 -i ./.key reverse-proxy/docker-compose.yaml reverse-proxy/haproxy.cfg "piegarden@$TF_VAR_static_ip:reverse-proxy"
+            ssh -p 2222 -i ./.key "piegarden@$TF_VAR_static_ip" "cd reverse-proxy && sudo docker compose down || true && sudo docker compose up -d"
   build:
     docker:
       - image: cimg/base:current
