--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -20,6 +20,17 @@ frontend tcp-in
     use_backend staging if staging_acl
     use_backend production if production_acl
 
+frontend ssh-in                                                       
+    bind *:22                                                         
+    mode tcp                                                          
+                                                                      
+    # Here you can apply any ACLs as needed for SSH                   
+    # For example, you could allow certain host patterns or IP        
+addresses.                                                            
+                                                                      
+    # Use a default backend for ssh connections, modify as necessary  
+    use_backend ssh_backend                                           
+
 backend local
     mode tcp
     server local local:443
@@ -31,3 +42,9 @@ backend staging
 backend production
     mode tcp
     server production production:443
+
+
+backend ssh_backend                                                   
+   mode tcp                                                          
+   # Replace this with the actual server that should handle SSH traffic.                                                              
+   server ssh_server production-terminaltype:22                              
