--- a/reverse-proxy/haproxy.cfg
+++ b/reverse-proxy/haproxy.cfg
@@ -25,8 +25,7 @@ frontend ssh-in
     mode tcp                                                          
                                                                       
     # Here you can apply any ACLs as needed for SSH                   
-    # For example, you could allow certain host patterns or IP        
-addresses.                                                            
+    # For example, you could allow certain host patterns or IP addresses.                                                            
                                                                       
     # Use a default backend for ssh connections, modify as necessary  
     use_backend ssh_backend                                           
